--- a/Insurance.ipynb
+++ b/Insurance.ipynb
@@ -2900,8 +2900,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Logistics Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score for the Logistic model: 0.6363330189950155\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "logis = LogisticRegression(penalty='l2',multi_class='auto')\n",
+    "logis.fit(X_train, y_train)\n",
+    "y_pred = logis.predict(X_test)\n",
+    "logit_accuracy = accuracy_score(y_test,y_pred)\n",
+    "print('Accuracy score for the Logistic model:', logit_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score for the KNN model: 0.48733665633840767\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "knn = KNeighborsClassifier(n_neighbors=133, p=2, metric='minkowski')\n",
+    "knn.fit(X_train, y_train)\n",
+    "y_preds = knn.predict(X_test)\n",
+    "knn_accuracy = accuracy_score(y_test, y_preds)\n",
+    "print('Accuracy score for the KNN model:', knn_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# End of Model development taking all columns \n",
-    "# *******************************************************************************************"
+    "\n",
+    "# *******************************************************************************************\n",
+    "<hr>"
    ]
   },
   {
