--- a/ML2 Project - Insurance Dataset - kashish.khatwani@gmail.com.ipynb
+++ b/ML2 Project - Insurance Dataset - kashish.khatwani@gmail.com.ipynb
@@ -42,16 +42,13 @@
     "<a id=section1></a>\n",
     "# 1. Introduction\n",
     "\n",
-    "In Machine Learning Foundation-1 term, following topics were covered \n",
+    "In Machine Learning Foundation-1 term, basic machine learning algorigthsm like Linear Regression, Logistic reqressioin, Decision tree, Random Forest along with model evaluation techniques were covered.\n",
     "\n",
-    "1. Introduction to Machine Learning \n",
-    "2. Linear Regression\n",
-    "3. Logistic Regression\n",
-    "4. Decision Tree\n",
-    "5. Random Forest\n",
-    "6. Model Evaluation Techniques \n",
+    "I worked on Insurance Risk Classification project which is multi-class classification as part of my ML-1 term project. Based on the analysis and model built, it was concluded that Advance Machine learning algorithms, feature engineering methods will be required to get better accuracy models \n",
     "\n",
-    "Based on the learnings, I have worked on Insurance Risk Classification project which is multi-class classification. \n",
+    "In ML2, PCA - Dimensionality reduction technique, advance algorithms like KNN, Naive Bayes,SVM, K Means clustering, timeseries were covered. \n",
+    "\n",
+    "Incorporating feedback received from INSAID faculties and applying PCA, few advance algorithms, here's my ML - 2 project.  \n",
     "\n"
    ]
   },
@@ -3351,150 +3348,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Id                     0\n",
-       "Product_Info_1         0\n",
-       "Product_Info_2         0\n",
-       "Product_Info_3         0\n",
-       "Product_Info_4         0\n",
-       "Product_Info_5         0\n",
-       "Product_Info_6         0\n",
-       "Product_Info_7         0\n",
-       "Ins_Age                0\n",
-       "Ht                     0\n",
-       "Wt                     0\n",
-       "BMI                    0\n",
-       "Employment_Info_1      0\n",
-       "Employment_Info_2      0\n",
-       "Employment_Info_3      0\n",
-       "Employment_Info_4      0\n",
-       "Employment_Info_5      0\n",
-       "Employment_Info_6      0\n",
-       "InsuredInfo_1          0\n",
-       "InsuredInfo_2          0\n",
-       "InsuredInfo_3          0\n",
-       "InsuredInfo_4          0\n",
-       "InsuredInfo_5          0\n",
-       "InsuredInfo_6          0\n",
-       "InsuredInfo_7          0\n",
-       "Insurance_History_1    0\n",
-       "Insurance_History_2    0\n",
-       "Insurance_History_3    0\n",
-       "Insurance_History_4    0\n",
-       "Insurance_History_7    0\n",
-       "Insurance_History_8    0\n",
-       "Insurance_History_9    0\n",
-       "Family_Hist_1          0\n",
-       "Medical_History_1      0\n",
-       "Medical_History_2      0\n",
-       "Medical_History_3      0\n",
-       "Medical_History_4      0\n",
-       "Medical_History_5      0\n",
-       "Medical_History_6      0\n",
-       "Medical_History_7      0\n",
-       "Medical_History_8      0\n",
-       "Medical_History_9      0\n",
-       "Medical_History_11     0\n",
-       "Medical_History_12     0\n",
-       "Medical_History_13     0\n",
-       "Medical_History_14     0\n",
-       "Medical_History_16     0\n",
-       "Medical_History_17     0\n",
-       "Medical_History_18     0\n",
-       "Medical_History_19     0\n",
-       "Medical_History_20     0\n",
-       "Medical_History_21     0\n",
-       "Medical_History_22     0\n",
-       "Medical_History_23     0\n",
-       "Medical_History_25     0\n",
-       "Medical_History_26     0\n",
-       "Medical_History_27     0\n",
-       "Medical_History_28     0\n",
-       "Medical_History_29     0\n",
-       "Medical_History_30     0\n",
-       "Medical_History_31     0\n",
-       "Medical_History_33     0\n",
-       "Medical_History_34     0\n",
-       "Medical_History_35     0\n",
-       "Medical_History_36     0\n",
-       "Medical_History_37     0\n",
-       "Medical_History_38     0\n",
-       "Medical_History_39     0\n",
-       "Medical_History_40     0\n",
-       "Medical_History_41     0\n",
-       "Medical_Keyword_1      0\n",
-       "Medical_Keyword_2      0\n",
-       "Medical_Keyword_3      0\n",
-       "Medical_Keyword_4      0\n",
-       "Medical_Keyword_5      0\n",
-       "Medical_Keyword_6      0\n",
-       "Medical_Keyword_7      0\n",
-       "Medical_Keyword_8      0\n",
-       "Medical_Keyword_9      0\n",
-       "Medical_Keyword_10     0\n",
-       "Medical_Keyword_11     0\n",
-       "Medical_Keyword_12     0\n",
-       "Medical_Keyword_13     0\n",
-       "Medical_Keyword_14     0\n",
-       "Medical_Keyword_15     0\n",
-       "Medical_Keyword_16     0\n",
-       "Medical_Keyword_17     0\n",
-       "Medical_Keyword_18     0\n",
-       "Medical_Keyword_19     0\n",
-       "Medical_Keyword_20     0\n",
-       "Medical_Keyword_21     0\n",
-       "Medical_Keyword_22     0\n",
-       "Medical_Keyword_23     0\n",
-       "Medical_Keyword_24     0\n",
-       "Medical_Keyword_25     0\n",
-       "Medical_Keyword_26     0\n",
-       "Medical_Keyword_27     0\n",
-       "Medical_Keyword_28     0\n",
-       "Medical_Keyword_29     0\n",
-       "Medical_Keyword_30     0\n",
-       "Medical_Keyword_31     0\n",
-       "Medical_Keyword_32     0\n",
-       "Medical_Keyword_33     0\n",
-       "Medical_Keyword_34     0\n",
-       "Medical_Keyword_35     0\n",
-       "Medical_Keyword_36     0\n",
-       "Medical_Keyword_37     0\n",
-       "Medical_Keyword_38     0\n",
-       "Medical_Keyword_39     0\n",
-       "Medical_Keyword_40     0\n",
-       "Medical_Keyword_41     0\n",
-       "Medical_Keyword_42     0\n",
-       "Medical_Keyword_43     0\n",
-       "Medical_Keyword_44     0\n",
-       "Medical_Keyword_45     0\n",
-       "Medical_Keyword_46     0\n",
-       "Medical_Keyword_47     0\n",
-       "Medical_Keyword_48     0\n",
-       "Response               0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Find out columns have missing values\n",
-    "data.isnull().sum()\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Cleanup over"
+    "### Data Cleanup completed"
    ]
   },
   {
@@ -5010,13 +4867,14 @@
     "        train_accuracy.append(accuracy_score(y_train,y_train_pred))\n",
     "\n",
     "      # Append train and test score to the empty list\n",
-    "        train_score.append(np.round(a=clf.score(X_train, y_train), decimals=2))\n",
-    "        test_score.append(np.round(a=clf.score(X_test,y_test), decimals=2))\n",
+    "       # train_score.append(np.round(a=clf.score(X_train, y_train), decimals=2))\n",
+    "       # test_score.append(np.round(a=clf.score(X_test,y_test), decimals=2))\n",
     "        clf_names.append(clf.__class__.__name__)\n",
     "        print('Success 1!')\n",
     "       \n",
     "    # Create a recall dataframe from recall and names list\n",
-    "    score_frame = pd.DataFrame(data={'Train Acurracy': train_accuracy, 'Test accuracy': test_accuracy,'Train Score': train_score, 'Test score': test_score,'Time(sec)':timetaken}, index=clf_names)\n",
+    "    score_frame = pd.DataFrame(data={'Train Acurracy': train_accuracy, 'Test accuracy': test_accuracy,'Time(sec)':timetaken}, index=clf_names)\n",
+    "    #score_frame = pd.DataFrame(data={'Train Acurracy': train_accuracy, 'Test accuracy': test_accuracy,'Train Score': train_score, 'Test score': test_score,'Time(sec)':timetaken}, index=clf_names)\n",
     "\n",
     "# View the recall of all the classifiers\n",
     "    score_frame.transpose()\n",
@@ -5057,243 +4915,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Logistic Regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'begin = time.time()\\nlog_clf.fit(X_train, y_train,X_test, y_test)\\n # Append train and test score to the empty list\\ny_pred =log_clf.predict(X_test)\\nprint(accuracy_score(y_test, y_pred))\\n#train_score.append(np.round(log_clf.accuracy_score(X_train, y_train), decimals=2))\\n#test_score.append(np.round(log_clf.accuracy_score(X_test,y_test), decimals=2))\\n#clf_names.append(log_clf.__class__.__name__)\\nend = time.time()\\ntimetaken.append(end - begin)\\nprint(end-begin)\\n'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''begin = time.time()\n",
-    "log_clf.fit(X_train, y_train,X_test, y_test)\n",
-    " # Append train and test score to the empty list\n",
-    "y_pred =log_clf.predict(X_test)\n",
-    "print(accuracy_score(y_test, y_pred))\n",
-    "#train_score.append(np.round(log_clf.accuracy_score(X_train, y_train), decimals=2))\n",
-    "#test_score.append(np.round(log_clf.accuracy_score(X_test,y_test), decimals=2))\n",
-    "#clf_names.append(log_clf.__class__.__name__)\n",
-    "end = time.time()\n",
-    "timetaken.append(end - begin)\n",
-    "print(end-begin)\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nbegin = time.time()\\ndt_clf.fit(X_train, y_train)\\n # Append train and test score to the empty list\\ntrain_score.append(np.round(a=dt_clf.accuracy_score(X_train, y_train), decimals=2))\\ntest_score.append(np.round(a=dt_clf.accuracy_score(X_test,y_test), decimals=2))\\nclf_names.append(dt_clf.__class__.__name__)\\nend = time.time()\\ntimetaken.append(end - begin)\\n'"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "begin = time.time()\n",
-    "dt_clf.fit(X_train, y_train)\n",
-    " # Append train and test score to the empty list\n",
-    "train_score.append(np.round(a=dt_clf.accuracy_score(X_train, y_train), decimals=2))\n",
-    "test_score.append(np.round(a=dt_clf.accuracy_score(X_test,y_test), decimals=2))\n",
-    "clf_names.append(dt_clf.__class__.__name__)\n",
-    "end = time.time()\n",
-    "timetaken.append(end - begin)\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nbegin = time.time()\\ndtgs_clf.fit(X_train, y_train)\\n # Append train and test score to the empty list\\ntrain_score.append(np.round(a=dtgs_clf.accuracy_score(X_train, y_train), decimals=2))\\ntest_score.append(np.round(a=dtgs_clf.accuracy_score(X_test,y_test), decimals=2))\\nclf_names.append(dtgs_clf.__class__.__name__)\\nend = time.time()\\ntimetaken.append(end - begin)\\n'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "begin = time.time()\n",
-    "dtgs_clf.fit(X_train, y_train)\n",
-    " # Append train and test score to the empty list\n",
-    "train_score.append(np.round(a=dtgs_clf.accuracy_score(X_train, y_train), decimals=2))\n",
-    "test_score.append(np.round(a=dtgs_clf.accuracy_score(X_test,y_test), decimals=2))\n",
-    "clf_names.append(dtgs_clf.__class__.__name__)\n",
-    "end = time.time()\n",
-    "timetaken.append(end - begin)\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nbegin = time.time()\\nrf_clf.fit(X_train, y_train)\\n # Append train and test score to the empty list\\ntrain_score.append(np.round(a=rf_clf.accuracy_score(X_train, y_train), decimals=2))\\ntest_score.append(np.round(a=rf_clf.accuracy_score(X_test,y_test), decimals=2))\\nclf_names.append(rf_clf.__class__.__name__)\\nend = time.time()\\ntimetaken.append(end - begin)\\n'"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "begin = time.time()\n",
-    "rf_clf.fit(X_train, y_train)\n",
-    " # Append train and test score to the empty list\n",
-    "train_score.append(np.round(a=rf_clf.accuracy_score(X_train, y_train), decimals=2))\n",
-    "test_score.append(np.round(a=rf_clf.accuracy_score(X_test,y_test), decimals=2))\n",
-    "clf_names.append(rf_clf.__class__.__name__)\n",
-    "end = time.time()\n",
-    "timetaken.append(end - begin)\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nbegin = time.time()\\nknn_clf.fit(X_train, y_train)\\n # Append train and test score to the empty list\\ntrain_score.append(np.round(a=knn_clf.accuracy_score(X_train, y_train), decimals=2))\\ntest_score.append(np.round(a=knn_clf.accuracy_score(X_test,y_test), decimals=2))\\nclf_names.append(knn_clf.__class__.__name__)\\nend = time.time()\\ntimetaken.append(end - begin)\\n'"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "begin = time.time()\n",
-    "knn_clf.fit(X_train, y_train)\n",
-    " # Append train and test score to the empty list\n",
-    "train_score.append(np.round(a=knn_clf.accuracy_score(X_train, y_train), decimals=2))\n",
-    "test_score.append(np.round(a=knn_clf.accuracy_score(X_test,y_test), decimals=2))\n",
-    "clf_names.append(knn_clf.__class__.__name__)\n",
-    "end = time.time()\n",
-    "timetaken.append(end - begin)\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nbegin = time.time()\\nsv_clf.fit(X_train, y_train)\\n # Append train and test score to the empty list\\ntrain_score.append(np.round(a=sv_clf.score(X_train, y_train), decimals=2))\\ntest_score.append(np.round(a=sv_clf.score(X_test,y_test), decimals=2))\\nclf_names.append(sv_clf.__class__.__name__)\\nend = time.time()\\ntimetaken.append(end - begin)\\n'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "begin = time.time()\n",
-    "sv_clf.fit(X_train, y_train)\n",
-    " # Append train and test score to the empty list\n",
-    "train_score.append(np.round(a=sv_clf.score(X_train, y_train), decimals=2))\n",
-    "test_score.append(np.round(a=sv_clf.score(X_test,y_test), decimals=2))\n",
-    "clf_names.append(sv_clf.__class__.__name__)\n",
-    "end = time.time()\n",
-    "timetaken.append(end - begin)\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 106
-    },
-    "executionInfo": {
-     "elapsed": 1123,
-     "status": "ok",
-     "timestamp": 1608724171960,
-     "user": {
-      "displayName": "Hemanka Sarmah",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14Gj_7L8sR2roYE_SmONDRAxgwH-i_6-9ODxGQLSx=s64",
-      "userId": "03117686778150333716"
-     },
-     "user_tz": -330
-    },
-    "id": "O1ppYHMAsQaO",
-    "outputId": "4b3fe999-008f-4531-bf32-e75f48a080b0"
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_accuracy' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-38-0a77c0c3a0b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Create a recall dataframe from recall and names list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mscore_frame\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'Train Acurracy'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtrain_accuracy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Test accuracy'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtest_accuracy\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Train Score'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtrain_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Test score'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtest_score\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Time(sec)'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mtimetaken\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclf_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# View the recall of all the classifiers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mscore_frame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'train_accuracy' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Create a recall dataframe from recall and names list\n",
-    "score_frame = pd.DataFrame(data={'Train Acurracy': train_accuracy, 'Test accuracy': test_accuracy,'Train Score': train_score, 'Test score': test_score,'Time(sec)':timetaken}, index=clf_names)\n",
-    "\n",
-    "# View the recall of all the classifiers\n",
-    "score_frame.transpose()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "from sklearn.preprocessing import StandardScaler    \n",
     "def generate():\n",
     "    standardized = StandardScaler()\n",
     "    standardized.fit(X)\n",
     "    return standardized.transform(X)\n",
-    "X = generate()"
+    "X = generate()\n",
+    "'''"
    ]
   },
   {
@@ -5423,27 +5057,6 @@
    ],
    "source": [
     "build_models(X_pca_train, y_train,X_pca_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a recall dataframe from recall and names list\n",
-    "score_frame = pd.DataFrame(data={'Train Acurracy': train_accuracy, 'Test accuracy': test_accuracy,'Train Score': train_score, 'Test score': test_score,'Time(sec)':timetaken}, index=clf_names)\n",
-    "\n",
-    "# View the recall of all the classifiers\n",
-    "score_frame.transpose()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"ml\"></a>\n",
-    "# 5. Machine Learning"
    ]
   }
  ],
